KAN-455 <chore: apply custom Exception and code refatoring>