@@ -1,5 +1,7 @@
 package com.GASB.alerts.service;
 
+import com.GASB.alerts.exception.AlertSettingsNotFoundException;
+import com.GASB.alerts.exception.UnauthorizedAccessException;
 import com.GASB.alerts.model.dto.response.AlertsListResponse;
 import com.GASB.alerts.model.entity.AlertEmails;
 import com.GASB.alerts.model.entity.AlertSettings;
@@ -9,7 +11,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class ReturnAlertsListService {
@@ -22,26 +23,31 @@ public class ReturnAlertsListService {
         this.alertEmailsRepo = alertEmailsRepo;
     }
 
-    public AlertsListResponse getAlerts(long alertsId) {
+    public AlertsListResponse getAlerts(long adminId, long alertsId) {
 
         Optional<AlertSettings> alertSettingsOptional = alertSettingsRepo.findById(alertsId);
 
-        if(alertSettingsOptional.isPresent()){
-            AlertSettings alertSettings = alertSettingsOptional.get();
-
-            return AlertsListResponse.builder()
-                    .id(alertsId)
-                    .email(getEmail(alertsId))
-                    .title(alertSettings.getTitle())
-                    .content(alertSettings.getContent())
-                    .suspicious(alertSettings.isSuspicious())
-                    .sensitive(alertSettings.isDlp())
-                    .vt(alertSettings.isVt())
-                    .build();
-        } else {
-            throw new RuntimeException("No AlertSettings found for Id: " + alertsId);
+        if (alertSettingsOptional.isEmpty()) {
+            throw new AlertSettingsNotFoundException("No AlertSettings found for Id: " + alertsId);
         }
+
+        AlertSettings alertSettings = alertSettingsOptional.get();
+
+        if (alertSettings.getAdminUsers().getId() != adminId) {
+            throw new UnauthorizedAccessException("Admin is not authorized to update alertSettings with id: " + alertsId);
+        }
+
+        return AlertsListResponse.builder()
+                .id(alertsId)
+                .email(getEmail(alertsId))
+                .title(alertSettings.getTitle())
+                .content(alertSettings.getContent())
+                .suspicious(alertSettings.isSuspicious())
+                .sensitive(alertSettings.isDlp())
+                .vt(alertSettings.isVt())
+                .build();
     }
+
 
     private List<String> getEmail(long alertId){
         return alertEmailsRepo.findEmailByAlertId(alertId);
@@ -54,7 +60,7 @@ public class ReturnAlertsListService {
             // AlertEmails 엔티티 리스트에서 이메일 주소 추출
             List<String> emails = setting.getAlertEmails().stream()
                     .map(AlertEmails::getEmail)
-                    .collect(Collectors.toList());
+                    .toList();
 
             // AlertsListResponse 객체 생성
             return AlertsListResponse.builder()
@@ -66,6 +72,6 @@ public class ReturnAlertsListService {
                     .sensitive(setting.isDlp())
                     .vt(setting.isVt())
                     .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 }
